--- a/原理.md
+++ b/原理.md
@@ -6,7 +6,7 @@
 
 
 
-![image-20230829154433392](K:\柯峻伟\研究生\web三维建模项目\5_三角刨分算法研究\assets\image-20230829154433392-1716820261732-2.png)
+![image-20230829154433392](./assets/image-20230829154433392-1716820261732-2-1716963385690-1.png)
 
 ```
 public static void main(String []args) throws Exception {
