--- a/原理.md
+++ b/原理.md
@@ -375,16 +375,16 @@ public static void main(String []args) throws Exception {
 - 一开始先构造一个极大三角形，然后打乱插入点集的顺序。
 - 每次插入一个点 𝑃 ，**确定这个点在哪个三角形**，同时把这个三角形三个顶点连接插入点分成三份，分别命名为 a, b, c。
 
-<img src="/Users/kzl/Library/Application Support/typora-user-images/image-20240528160006761.png" alt="image-20240528160006761" style="zoom:50%;" />
+<img src="./assets/image-20240529143151076.png" alt="image-20240529143151076" style="zoom:50%;" />
 
 - 对于 a, b, c 三个三角形，我们把所有不包含 𝑃 的边标记为可疑边。
 - 对于所有可疑边，我们选择与插入点 𝑃 根据可疑边对立的顶点 q。设可疑边两个顶点为 x, y。此时 p, x, q, y 组成了一个四边形，**如果 q 在 p, x, y 组成的圆里**，那么我们要对四边形 p, x, q, y 进行**边翻转**操作。
 
-<img src="/Users/kzl/Library/Application Support/typora-user-images/image-20240528160027804.png" alt="image-20240528160027804" style="zoom:50%;" />
+<img src="./assets/image-20240529143203332.png" alt="image-20240529143203332" style="zoom:50%;" />
 
 - 如果进行了边翻转操作，我们要把 qx, qy 也标记为可疑边。
 
-<img src="/Users/kzl/Library/Application Support/typora-user-images/image-20240528160054695.png" alt="image-20240528160054695" style="zoom:50%;" />
+<img src="./assets/image-20240529143222685.png" alt="image-20240529143222685" style="zoom:50%;" />
 
 - 插入完所有点后算法就结束了。
 
