--- a/原理.md
+++ b/原理.md
@@ -408,7 +408,7 @@ public static void main(String []args) throws Exception {
 
 对于边和面来说，我们需要记录更多信息。为了能够知道这个边组成了哪个面，我们需要对边进行定向，如果某一些边逆时针可以组成一个面，那么就说这些边是这个面的**组成边**，这个面就成为这些边的**组成面**，如图所示
 
-<img src="/Users/kzl/Library/Application Support/typora-user-images/image-20240528162041860.png" alt="image-20240528162041860" style="zoom:50%;" />
+<img src="./assets/image-20240528162041860.png" alt="image-20240528162041860" style="zoom:50%;" />
 
 A 面是由红色的边所组成的，B 面是由蓝色的边组成的，注意 ac 和 ca 组成的面是不同的。
 
@@ -579,8 +579,6 @@ Definition 3.4 约束欧几里得距离(Constraint Euclidean distance)
 Definition 3.5 (Constrained Voronoï diagram)
 
 ```
-
-![image-20240103152737954](K:\柯峻伟\学习记录\web\图片存储\image-20240103152737954.png)
 
 ![image-20240103155026805](./assets/image-20240103155026805.png)
 
@@ -1141,7 +1139,7 @@ private boolean addWithInsertOrAppend(final Vertex v) {
 
 2. 如果三个顶点都是实际的顶点，执行正常的内接圆计算。这里使用了行列式计算，它涉及到每个顶点相对于新插入顶点 `(x, y)` 的坐标差，并计算行列式值 `h`:
 
-   <img src="/Users/kzl/Library/Application Support/typora-user-images/image-20240528193754686.png" alt="image-20240528193754686" style="zoom:50%;" />
+   <img src="./assets/image-20240528193754686.png" alt="image-20240528193754686" style="zoom:50%;" />
 
 3. 其中 *a*11=*vA*.*x*−*x*, *a*12=*v**A*.*y*−*y*, *a*21=*v**B*.*x*−*x*, , 等等。如果 *h* 大于或等于0，则意味着新的顶点位于现有三角形外接圆内部，不满足Delaunay条件，需要进一步处理。
 
