--- a/原理.md
+++ b/原理.md
@@ -1680,7 +1680,140 @@ public void addConstraints(
 
 ![image-20231225100722165](./assets/image-20231225100722165.png)
 
+#### 洪水填充算法
+
+```java
+ // 对于定义了受约束区域的约束，进行洪水填充算法处理。
+  int maxIndex = getMaximumEdgeAllocationIndex();
+  BitSet visited = new BitSet(maxIndex + 1);
+  for (int i = 0; i < constraintList.size(); i++) {
+    IConstraint c = constraintList.get(i);
+    if (c.definesConstrainedRegion()) {
+      ArrayList<IQuadEdge> edgesForConstraint = efcList.get(i); // 获取当前约束的边缘列表。
+      floodFillConstrainedRegion(c, edgesForConstraint, visited); // 执行洪水填充。
+      c.setConstraintLinkingEdge(edgesForConstraint.get(0)); // 设置约束的链接边。
+    }
+  }
+  
+  
+  
+  /**
+*将受约束区域内的所有边标记为该区域的成员（将约束的索引值传递到成员边）。这种方法的名称是基于这样一种想法，即该操作类似于计算机图形学中的洪水填充算法。
+*
+*@param c给出洪水填充区域的约束
+*@param edge列出与受约束区域的边界相对应的边的列表
+*/
+
+private void floodFillConstrainedRegion(
+    final IConstraint c,
+    final ArrayList<IQuadEdge> edgeList,
+    final BitSet visited) {
+
+    int constraintIndex = c.getConstraintIndex();
+    for (IQuadEdge e : edgeList) {
+      if (e.isConstrainedRegionBorder()) {
+        floodFillConstrainedRegionsQueue(constraintIndex, visited, e);
+      }
+    }
+  }
+
+private void floodFillConstrainedRegionsQueue(
+    final int constraintIndex,
+    final BitSet visited,
+    final IQuadEdge firstEdge) {
+//虽然使用递归可以更优雅地编码以下逻辑，但递归的深度可能会变得如此之深，以至于它会溢出任何合理大小的堆栈。因此，我们使用显式编码堆栈。
+//对于洪水填充区内出现替代约束的情况，这里有特殊的逻辑。例如，线性约束可能发生在多边形内部（道路可能穿过城镇）。
+//该逻辑需要从替换约束中保留所包含边的约束索引。在这种情况下，整体填充会经过嵌入的边，但不会对其进行修改。
+    ArrayDeque<IQuadEdge> deque = new ArrayDeque<>();
+    deque.push(firstEdge);
+    while (!deque.isEmpty()) {
+      if (deque.size() > maxLengthOfQueueInFloodFill) {
+        maxLengthOfQueueInFloodFill = deque.size();
+      }
+      IQuadEdge e = deque.peek();
+      IQuadEdge f = e.getForward();
+      int fIndex = f.getIndex();
+      if (!f.isConstrainedRegionBorder() && !visited.get(fIndex)) {
+        visited.set(fIndex);
+        f.setConstrainedRegionInteriorFlag();
+        f.setConstraintIndex(constraintIndex);
+        deque.push(f.getDual());
+        continue;
+      }
+      IQuadEdge r = e.getReverse();
+      int rIndex = r.getIndex();
+      if (!r.isConstrainedRegionBorder() && !visited.get(rIndex)) {
+        visited.set(rIndex);
+        r.setConstrainedRegionInteriorFlag();
+        r.setConstraintIndex(constraintIndex);
+        deque.push(r.getDual());
+        continue;
+      }
+      deque.pop();
+    }
+  }
+
+
+```
+
+这段代码属于一个处理空间几何数据的项目（假设是名为Tinfor的项目），其中使用了所谓的"洪水填充算法"来标记通过线性约束定义的受限区域。它在一个三角网格结构中工作，该结构由称为`IQuadEdge`的边组成。以下是这段代码的大致逻辑：
+
+1. **获取最大索引**:
+
+   - `maxIndex`变量是通过调用`getMaximumEdgeAllocationIndex()`函数获得的，它可能代表了所有边对象中最大的索引值。
+
+2. **初始化访问记录**:
+
+   - 一个`BitSet`名为`visited`被初始化，其大小设置为`maxIndex + 1`，用以记录每条边在洪水填充过程中是否已经访问过。
+
+3. **遍历约束**:
+
+   - 代码遍历一个名为`constraintList`的列表，该列表可能包含了多个定义了受限区域的`IConstraint`对象。
+
+   - 对于每一个
+
+     ```
+     IConstraint
+     ```
+
+     对象，如果它确实定义了一个受限区域(
+
+     ```
+     definesConstrainedRegion()
+     ```
+
+     返回
+
+     ```
+     true
+     ```
+
+     )，则：
+
+     - 从`efcList`（一个与`constraintList`对应的边列表数组）中获取与此约束相关联的边列表。
+     - 使用`floodFillConstrainedRegion`方法对受限区域进行洪水填充操作，传入当前约束、相关的边列表以及`visited`记录。
+     - 将约束关联到其边界的第一条边（用作链接或参考点）。
+
+4. **洪水填充受限区域**:
+
+   - `floodFillConstrainedRegion`方法接收一个约束对象`c`、一个边列表`edgeList`和`visited`记录。
+   - 对于边列表中的每条边，如果该边是受限区域的边界，调用`floodFillConstrainedRegionsQueue`方法进行实际的洪水填充操作。
+
+5. **队列管理的洪水填充**:
+
+   - `floodFillConstrainedRegionsQueue`方法使用显式堆栈（这里是`ArrayDeque`类型的`deque`）来模拟递归，因为真正的递归可能会消耗太多的堆栈空间导致溢出。
+   - 算法开始时将第一条边推入堆栈。
+   - 然后 while 循环保持运行，直到堆栈为空，依次进行以下检查和操作：
+     - 检查当前堆栈长度是否超过记录的`maxLengthOfQueueInFloodFill`，如果是，则更新该记录。
+     - 查看堆栈顶部的边，但不移除它（`peek`操作）。
+     - 获取并检查当前边的“前进”边和“反向”边，以确定是否需要继续填充。
+     - 如果某条边不是受限区域的边界且未访问过，将其标记为已访问，设置为受限区域内部，更新其约束索引，并将其对偶边推入堆栈。
+     - 如果没有新边要处理，从堆栈中弹出当前边（`pop`操作）。
+
+通过上述算法，您可以**将与特定约束相关联的边集合内部的所有边都标记为该约束的一部分**，同时确保不会溢出程序的调用堆栈，并能正确处理嵌套的受限区域。
+
 ### 6、processConstraint(
+
     IConstraint constraint,
     ArrayList< IQuadEdge> edgesForConstraint) 
 
