--- a/原理.md
+++ b/原理.md
@@ -1727,7 +1727,7 @@ public void addConstraints(
 #### 洪水填充算法
 
 ```java
- // 对于定义了受约束区域的约束，进行洪水填充算法处理。
+// 对于定义了受约束区域的约束，进行洪水填充算法处理。
   int maxIndex = getMaximumEdgeAllocationIndex();
   BitSet visited = new BitSet(maxIndex + 1);
   for (int i = 0; i < constraintList.size(); i++) {
@@ -1739,13 +1739,12 @@ public void addConstraints(
     }
   }
   
-  
-  
-  /**
-*将受约束区域内的所有边标记为该区域的成员（将约束的索引值传递到成员边）。这种方法的名称是基于这样一种想法，即该操作类似于计算机图形学中的洪水填充算法。
+/**
+*将受约束区域内的所有边标记为该区域的成员（将约束的索引值传递到成员边）
+。这种方法的名称是基于这样一种想法，即该操作类似于计算机图形学中的洪水填充算法。
 *
-*@param c给出洪水填充区域的约束
-*@param edge列出与受约束区域的边界相对应的边的列表
+*@param c 给出洪水填充区域的约束
+*@param edge 列出与受约束区域的边界相对应的边的列表
 */
 
 private void floodFillConstrainedRegion(
@@ -1800,12 +1799,15 @@ private void floodFillConstrainedRegionsQueue(
 
 ```
 
-这段代码属于一个处理空间几何数据的项目（假设是名为Tinfor的项目），其中使用了所谓的"洪水填充算法"来标记通过线性约束定义的受限区域。它在一个三角网格结构中工作，该结构由称为`IQuadEdge`的边组成。以下是这段代码的大致逻辑：
+"洪水填充算法"用来标记通过线性约束定义的受限区域。
+
+它在一个三角网格结构中工作，该结构由称为`IQuadEdge`的边组成。
+
+以下是这段代码的大致逻辑：
 
 1. **获取最大索引**:
-
    - `maxIndex`变量是通过调用`getMaximumEdgeAllocationIndex()`函数获得的，它可能代表了所有边对象中最大的索引值。
-
+   
 2. **初始化访问记录**:
 
    - 一个`BitSet`名为`visited`被初始化，其大小设置为`maxIndex + 1`，用以记录每条边在洪水填充过程中是否已经访问过。
@@ -1814,25 +1816,7 @@ private void floodFillConstrainedRegionsQueue(
 
    - 代码遍历一个名为`constraintList`的列表，该列表可能包含了多个定义了受限区域的`IConstraint`对象。
 
-   - 对于每一个
-
-     ```
-     IConstraint
-     ```
-
-     对象，如果它确实定义了一个受限区域(
-
-     ```
-     definesConstrainedRegion()
-     ```
-
-     返回
-
-     ```
-     true
-     ```
-
-     )，则：
+   - 对于每一个IConstraint对象，如果它确实定义了一个受限区域(definesConstrainedRegion()返回true)，则：
 
      - 从`efcList`（一个与`constraintList`对应的边列表数组）中获取与此约束相关联的边列表。
      - 使用`floodFillConstrainedRegion`方法对受限区域进行洪水填充操作，传入当前约束、相关的边列表以及`visited`记录。
