--- a/逆断层/逆断层.md
+++ b/逆断层/逆断层.md
@@ -48,3 +48,40 @@ _________
 
 - **喜马拉雅山脉**: 喜马拉雅山脉是由印度板块与欧亚板块碰撞挤压形成的，区域内有大量逆断层。
 - **阿尔卑斯山脉**: 阿尔卑斯山脉的形成也与板块挤压有关，存在许多逆断层。
+
+
+
+# 剖分
+
+![image-20240626192907397](./assets/image-20240626192907397.png)
+
+错开的边界3和边界2，形成微小内边界进行第一次剖分。
+
+然后边界1和边界3进行单独外边界剖分成一部分网格。
+
+
+
+# 文献
+
+https://dds.sciengine.com/cfs/files/pdfs/view/1001-1986/8F783A9CBE344ECFAAE84B39D6EA23A4.pdf
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
