--- a/逆断层/逆断层.md
+++ b/逆断层/逆断层.md
@@ -59,6 +59,16 @@ _________
 
 然后边界1和边界3进行单独外边界剖分成一部分网格。
 
+![image-20240626211903026](./assets/image-20240626211903026.png)
+
+![image-20240626212452536](./assets/image-20240626212452536.png)
+
+![image-20240626213346200](./assets/image-20240626213346200.png)
+
+## 思路
+
+<img src="./assets/1bbc13cf15e470c89f5d5cf3e6b9145e.jpg" alt="1bbc13cf15e470c89f5d5cf3e6b9145e" style="zoom: 33%;" />
+
 
 
 # 文献
