--- a/逆断层/逆断层.md
+++ b/逆断层/逆断层.md
@@ -82,13 +82,11 @@ _________
 5. 此时，第一个网格剖分不关心（忽略）Pa Pb两个离散点集合以及Eu，Ed和Ec形成了临时内边界进行第一次网格剖分，得到网格MeshA。
 6. 第二次网格剖分由Eu、Ec组成外边界（逆时针），离散点由Pa、Pb点集组成，形成第二个网格MeshB。
 
-
-
 ### 问题
 
 1、在上下盘边界形成的内部，上下盘的离散点都有 混在一起？
 
-2、如何确定边界c 取点的方向？
+2、如何确定边界c 取点的方向？（上盘两点一个向量，下盘两点一个向量，叉积得到垂直于断层面的方向，再进一步确定下盘边界端点连线的哪一侧筛选期望顶点。  ）
 
 3、确定方向以后怎么取？取点、排序。需要得出的有Ec、Pa、Pb。
 
@@ -96,11 +94,35 @@ _________
 
 
 
+边界内范围内筛选点：射线法（任取一个方向，无交点或为偶数个则不在范围内，暂时不考虑特殊情况）
+
+
+
+筛选完了以后，取边界和确定Pb的问题。
+
+![image-20240703212137055](./assets/image-20240703212137055.png)
+
 ------
 
 
 
-为了在固定连线的基础上选择一定范围内的指定距离内最远的一系列点形成闭环，我们需要：
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 1. **选择固定连线的点作为初始点**。
 2. **选择一定范围内的离散点**。
@@ -108,11 +130,7 @@ _________
 4. **根据距离排序这些点**。
 5. **结合固定连线的点和选择的离散点形成闭环**。
 
-### Java实现方案
-
-假设我们有固定连线的点（按顺序连接）和离散点的列表，并且希望在一定范围内选择离散点。
-
-#### Java代码示例
+假设有固定连线的点（按顺序连接）和离散点的列表，并且希望在一定范围内选择离散点。
 
 ```java
 import java.awt.geom.Point2D;
@@ -144,8 +162,8 @@ public class ClosedLoop {
 
         double range = 2.0; // 指定的范围
 
-        // 计算固定点的中心
-        Point2D center = calcula	teCenter(fixedPoints);
+        // 计算一个的中心
+        Point2D center = calculateCenter(fixedPoints);
 
         // 筛选范围内的离散点
         List<Point2D> pointsInRange = new ArrayList<>();
@@ -204,7 +222,7 @@ public class ClosedLoop {
 }
 ```
 
-### 代码说明
+代码说明
 
 1. **固定连线的点**：定义了一组固定点，这些点已经连成一条线。
 2. **离散点**：定义了一组离散点。
